# mastodon-notifier

./: Cargo.toml  README.md
contrib/: mastodon-notifier.service
src/: auth.rs  client.rs  config.rs  daemon.rs  lib.rs  main.rs  notification.rs  opts.rs  util.rs
