[package]
name = "mastodon-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
serde = {version = "1", features = ["derive"]}
tokio = { version = "1", features = ["full"]}
async-tungstenite = { version = "0.18.0", features = [
  "tokio-runtime",
  "tokio-native-tls",
] }

futures = "0.3.25"
reqwest = { version = "0.11.12", features = ["json"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde_json = "1"
html2text = "0.4.4"
keyring = "1.2.0"
clap = { version = "4.0.25", features = ["derive"] }
dialoguer = "0.10.2"
zbus = "3.5.0"
zbus_macros = "3.5.0"
zvariant = "3.8.0"
